--- a/backend/src/main/resources/application-production.properties
+++ b/backend/src/main/resources/application-production.properties
@@ -1,4 +1,10 @@
+# Si vous utilisez l'URL unique
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# OU si vous utilisez des variables séparées
+# spring.datasource.url=${JDBC_DATABASE_URL}
+# spring.datasource.username=${JDBC_DATABASE_USERNAME}
+# spring.datasource.password=${JDBC_DATABASE_PASSWORD}
