Ajout fileReplacements dans angular.json

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -38,11 +38,17 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
-            "ssr": false,  
+            "ssr": false,
             "outputPath": "dist/frontend"
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                   {
                     "type": "initial",
